--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "axios": "^1.4.0",
     "bulma": "^0.9.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
