--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/app.ts"
+    "start": "node dist/app.js",
+    "build": "tsc --build",
+    "dev": "ts-node-dev src/app.ts"
   },
   "author": "",
   "license": "ISC",
